Fix: Move volume slider closer to icon - Bottom: 45px  38px - Tighter spacing for better visual connection

--- a/style.css
+++ b/style.css
@@ -1250,7 +1250,7 @@ header p {
 .volume-slider {
     position: absolute;
     left: 50%;
-    bottom: 45px;
+    bottom: 38px;
     transform: translateX(-50%);
     display: flex;
     flex-direction: column;
